fix naming, better card images

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="keywords" content="Blackjack, 21, Javascript, Blackjack Teacher, Blackjack Tutor, Game">
+		<title>Kindle Blackjack Tutor</title>
 	</head>
 	<body>
 		<script src="lib/js/blackjack_teacher.js"></script>
